Get best 3 highest daily rate movies
